--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mapkit.js",
-  "version": "5.34.2",
+  "version": "5.34.2-beta",
   "description": "An npm module for Apple's Mapkit.JS",
   "main": "index.js",
   "repository": {
