--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mapkit.js-apple",
-  "version": "5.34.8",
+  "name": "mapkit.js",
+  "version": "0.0.1",
   "description": "An npm module for Apple's Mapkit.JS",
   "main": "index.js",
   "repository": {
